entrypoints/twitter.content/twitter.scss
:root:not([sift-paused="true"])[twitter-hide-grok="true"] {
	[href="/i/grok"] {
		display: none;
	}
}

:root:not([sift-paused="true"])[twitter-hide-creator-studio="true"] {
	[href*="creator_studio"],
	[href*="creatorstudio"] {
		display: none;
	}
}

//hides the "What's new" feed on the right sidebar
:root:not([sift-paused="true"])[twitter-hide-whats-new-feed="true"] {
	*:has([data-testid*="news_sidebar_article"]):not(:has(input)) {
		display: none;
	}
}

:root:not([sift-paused="true"])[twitter-hide-premium="true"] {
	// hides the "Premium" aside on the right sidebar
	div:has(> aside [href="/i/premium_sign_up"]) {
		display: none;
	}
	// hides the "Premium" button on the left sidebar
	[href="/i/premium_sign_up"] {
		display: none;
	}
	[data-testid="verified_profile_visitor_upsell"] {
		display: none;
	}
}

// trending section
:root:not([sift-paused="true"])[twitter-hide-trending-feed="true"] {
	[data-testid="sidebarColumn"] {
		div:has(> section [data-testid="trend"]) {
			display: none;
		}
	}

	&[page-path*="explore"] {
		[data-testid="primaryColumn"] {
			div:has(h2):has(+ * [data-testid="trend"]) {
				display: none;
			}
		}
	}

	[data-testid="trend"] {
		display: none;
	}

	&[page-path*="trending"] {
		[data-testid="primaryColumn"] {
			opacity: 0;
			visibility: hidden;
		}
	}
	div:has(> [href*="/explore/tabs/trending"]) {
		display: none;
	}
}

// who to follow section
:root:not([sift-paused="true"])[twitter-hide-who-to-follow-feed="true"] {
	// right sidebar
	[data-testid="sidebarColumn"] {
		div:has([data-testid="UserCell"]):has(+ :not([data-testid="UserCell"])) {
			display: none;
		}
	}

	// left sidebar
	[href="/i/connect_people"] {
		display: none;
	}

	// page
	&[page-path="/i/connect_people/"] [data-testid="primaryColumn"] {
		opacity: 0;
		visibility: hidden;
	}

	// explore page
	&[page-path="/explore/"] {
		[data-testid="UserCell"] {
			display: none;
		}
		[data-testid="primaryColumn"] {
			div:has(h2):has(+ * [data-testid="UserCell"]) {
				display: none;
			}
		}
	}
	&[page-path="/home/"] {
		[data-testid="primaryColumn"] {
			div:has(button button):has(~ div article) {
				display: none;
			}
		}
	}

	// we don't want to hide user profiles under these paths
	// https://x.com/.../verified_followers
	// https://x.com/.../followers_you_follow
	// https://x.com/.../followers
	// https://x.com/.../following
	&:not([page-path*="follow"]) {
		[data-testid="UserCell"] {
			display: none;
		}
	}

	// my profile page
	&:has([data-testid="editProfileButton"]) {
		[data-testid="primaryColumn"] {
			div:has(h2):has(+ * [data-testid="UserCell"]) {
				display: none;
			}
		}
	}
	[href*="/i/connect_people"] {
		display: none;
	}
}

// hide following feed
:root:not([sift-paused="true"])[twitter-hide-feed="true"][page-path="/home/"] {
	[data-testid="primaryColumn"] {
		&:has(nav [role="presentation"]:last-child [aria-selected="true"]) {
			section {
				opacity: 0;
				visibility: hidden;
			}
		}
	}
}
// hide for you feed
:root:not([sift-paused="true"])[twitter-hide-for-you-feed="true"][page-path="/home/"] {
	[data-testid="primaryColumn"] {
		nav [role="presentation"]:first-child {
			display: none;
		}
		&:has(nav [role="presentation"]:first-child [aria-selected="true"]) {
			section {
				opacity: 0;
				visibility: hidden;
			}
		}
	}
}

:root:not([sift-paused="true"])[twitter-hide-explore-feed="true"][page-path="/explore/"] {
	nav:has([href*="/explore/tabs/"]) {
		display: none;
	}
	[data-testid="cellInnerDiv"] {
		opacity: 0 !important;
		visibility: hidden !important;
	}
}

